# hibernia

./: .gitignore  CABAC.md  CABAC_MISMATCHES_3_4.md  Cargo.toml  GEMINI.md  HIGH_PROFILE_GAP_REPORT.md  LICENSE  README.md  SIMD_OPPORTUNITIES.md  WASM.md  all_references.txt  all_references_full.txt  all_tests_final.txt  check_gold  check_start_codes  compare_parsers  debug_log.txt  debug_mv_hack.txt  debug_nal  debug_output.txt  debug_output_mb01.txt  debug_ref_list.txt  debug_ref_swap.txt  decoder.md  dpb.md  gemini-review.md  journal.md  motion.md  new_debug.txt  output.y4m  plan.md  rustfmt.toml  validate_cabac_tables.py  wasm.md
.cargo/: config  config.toml
.github/workflows/: rust.yml
benches/: benchmark.rs  decoding.rs  inter_pred.rs
crates/h264_gen/: Cargo.toml
crates/h264_gen/src/: bitstream_gen.rs  lib.rs  main.rs  nal_writer.rs  rbsp_writer.rs  writer.rs
crates/h264_gen/tests/: e2e_encode.rs  json_schemas.rs
crates/hibernia/: Cargo.toml
crates/hibernia-cli/: Cargo.toml
crates/hibernia-cli/src/: main.rs
crates/hibernia-wasm/: Cargo.toml
crates/hibernia-wasm/src/: lib.rs
crates/hibernia/benches/: decoding.rs
crates/hibernia/src/: diag.rs  lib.rs  y4m_cmp.rs
crates/hibernia/src/h264/: bitstream_gen.rs  cabac.rs  cavlc.rs  deblocking.rs  decoder.rs  dpb.rs  e2e_encode_test.rs  e2e_tests.rs  inter_pred.rs  intra_pred.rs  macroblock.rs  mod.rs  nal_parser.rs  nal_writer.rs  parser.rs  poc.rs  pps.rs  rbsp.rs  rbsp_writer.rs  residual.rs  scaling_list.rs  slice.rs  sps.rs  table_9-44.rs  table_9-9_a.rs  table_9-9_b.rs  tables.rs  tables_9-12to33_i.rs  tables_9-12to33_pb1.rs  tables_9-12to33_pb2.rs  writer.rs
crates/hplay/: Cargo.toml
crates/hplay/src/: main.rs
data/: CABA2_SVA_B_rec.y4m  CANL1_Sony_E.y4m  NL2_Sony_H-first-2-frames-trace.txt
data/BA1_Sony_D/: BA1_Sony_D.y4m
data/CABA3_SVA_B/: CABA3_SVA_B_rec.y4m
data/CABAST3_Sony_E/: CABAST3_Sony_E.y4m
data/CACQP3_Sony_D/: CACQP3_Sony_D.y4m
data/NL1_Sony_D/: NL1_Sony_D.y4m
data/SVA_BA2_D/: SVA_BA2_D_rec.y4m
data/SVA_Base_B/: SVA_Base_B_rec.y4m
data/SVA_NL1_B/: SVA_NL1_B.y4m
demo/: index.html
demo/pkg/: hibernia.js  hibernia_bg.wasm
scripts/: validate_cabac_tables.py
spec/: h264.md
spec/sections/: 0.1_Prologue.md  0.2_Purpose.md  0.3_Applications.md  0.4_Publication_and_versions_of_this_Specification.md  0.5_Profiles_and_levels.md  0.6_Overview_of_the_design_characteristics.md  0.7_How_to_read_this_Specification.md  0_Introduction.md  1_Scope.md  2_Normative_references.md  3_Definitions.md  4_Abbreviations.md  5.10_Text_description_of_logical_operations.md  5.1_Arithmetic_operators.md  5.2_Logical_operators.md  5.3_Relational_operators.md  5.4_Bit-wise_operators.md  5.5_Assignment_operators.md  5.6_Range_notation.md  5.7_Mathematical_functions.md  5.8_Order_of_operation_precedence.md  5.9_Variables_syntax_elements_and_tables.md  5_Conventions.md  6.1_Bitstream_formats.md  6.2_Source_decoded_and_output_picture_formats.md  6.3_Spatial_subdivision_of_pictures_and_slices.md  6.4_Inverse_scanning_processes_and_derivation_processes_for_neighbours.md  6_Source_coded_decoded_and_output_data_formats_scanning_processes_and_neighbouring_relationships.md  7.1_Method_of_specifying_syntax_in_tabular_form.md  7.2_Specification_of_syntax_functions_categories_and_descriptors.md  7.3_Syntax_in_tabular_form.md  7.4_Semantics.md  7_Syntax_and_semantics.md  8.1_NAL_unit_decoding_process.md  8.2_Slice_decoding_process.md  8.3_Intra_prediction_process.md  8.4_Inter_prediction_process.md  8.5_Transform_coefficient_decoding_process_and_picture_construction_process_prior_to_deblocking_filter_process.md  8.6_Decoding_process_for_P_macroblocks_in_SP_slices_or_SI_macroblocks.md  8.7_Deblocking_filter_process.md  (+84 more)
src/: diag.rs  diag.rs.md  lib.rs  main.rs  main.rs.md  wasm.rs  y4m_cmp.rs  y4m_cmp.rs.md
src/h264/: bitstream_gen.rs  cabac.rs  cabac_init_tables_i.rs  cabac_init_tables_pb0.rs  cabac_init_tables_pb1.rs  cabac_init_tables_pb2.rs  cabac_tables.rs  cavlc.rs  cavlc.rs.md  deblocking.rs  deblocking_filter.rs  decoder.rs  decoder.rs.md  dpb.rs  e2e_encode_test.rs  e2e_tests.rs  inter_pred.rs  intra_pred.rs  json_tests.rs  macroblock.rs  macroblock.rs.md  mod.rs  mod.rs.md  nal.rs  nal.rs.md  nal_parser.rs  nal_writer.rs  parser.rs  parser.rs.md  poc.rs  pps.rs  pps.rs.md  profiles.md  profiles.txt  rbsp.rs  rbsp.rs.md  rbsp_writer.rs  reader.rs  residual.rs  residual.rs.md  (+25 more)
tests/: ffmpeg_tests.rs
www/: index.html
