[package]
name = "hibernia"
version = "0.1.0"
edition = "2021"

[dependencies]
bitstream-io = "2.2.0"
num-traits = "0.2.17"
num-derive = "0.4.1"
v_frame = "0.3.6"
log = "0.4"
y4m = "0.8.0"
smallvec = "1.13"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "decoding"
harness = false

[[bench]]
name = "inter_pred"
harness = false
