[package]
name = "hibernia"
version = "0.2.0"
edition = "2021"
authors = ["Eugene Zemtsov"]
description = "Clean-room implementation of H.264 video decoder"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Djuffin/hibernia"
keywords = ["video", "h264", "avc", "decoder"]
categories = ["multimedia::video"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitstream-io = "2.2.0"
num-traits = "0.2.17"
num-derive = "0.4.1"
v_frame = "0.3.6"
log = "0.4"
y4m = "0.8.0"
smallvec = "1.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = { version = "1.2.1", features = ["smallvec1"] }
wide = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "decoding"
harness = false
