[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Eugene Zemtsov"]
license = "MIT"
repository = "https://github.com/Djuffin/hibernia"

[profile.release]
debug = "line-tables-only"

[profile.bench]
debug = "line-tables-only"

[workspace.dependencies]
bitstream-io = "2.2.0"
num-traits = "0.2.17"
num-derive = "0.4.1"
v_frame = "0.3.6"
log = { version = "0.4", features = ["release_max_level_info"] }
y4m = "0.8.0"
smallvec = "1.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = { version = "1.2.1", features = ["smallvec1"] }
wide = "1.3.0"
iced = { version = "=0.14.0", features = ["image", "smol"] }
criterion = "0.5"
hibernia = { path = "crates/hibernia", version = "0.2.0" }
