[package]
name = "hibernia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Clean-room implementation of H.264 video decoder"
readme = "../../README.md"
keywords = ["video", "h264", "avc", "decoder"]
categories = ["multimedia::video"]

[dependencies]
bitstream-io = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
v_frame = { workspace = true }
log = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
wide = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
y4m = { workspace = true }

[[bench]]
name = "decoding"
harness = false
